fixed record overlapping thanks to Andreas Niedermair's solution, centered records and fixed some minor css bugs

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -79,7 +79,6 @@ body
       > div
         height 14.285%
         background #fff
-        border-bottom solid 1px #ccc
         width 4320px
         position relative
         
@@ -87,7 +86,7 @@ body
           border-bottom-color #fff
         
         &:nth-child(2n + 1)
-          background #fdfdfd
+          background #eee
       
       .time-indicators
         height 100%
@@ -98,8 +97,7 @@ body
           width 360px
           height 100%
           border-left 1px solid #ddd
-          position relative
-          color #ddd
+          color #ccc
           font-size 12px
           padding 0 0 0 10px
           margin 0 0 0 -1px
@@ -121,11 +119,11 @@ body
 
       .record
         width 180px
-        height 80%
+        height 28%
         border-radius 0px
         position absolute
-        top 10%
-        transition height 0.1s linear, top 0.1s linear
+        top 8%
+        transition height 0.05s linear, top 0.05s linear
         user-select none
 
         .drag-right,
@@ -145,8 +143,8 @@ body
         .time
           width 100%
           height 100%
-          font-size 18px
           position absolute
+          font-size 12px
           cursor pointer
           color #fff
 
@@ -192,6 +190,7 @@ body
 
     #time-pointer
       background #222
+      pointer-events none
       color #eee
       line-height 30px
       font-size 14px
